# telecom_settlement_rules_repo

./: .env  .gitignore  README.md  crewai.yaml  pyproject.toml  pyproject.toml-old  requirements.txt
src/: crewai.yaml
src/rulerepopoc/: MNO_MVNO_Tiered_Agreement.docx  crew.py  crewai.yaml  main.py
src/rulerepopoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rulerepopoc/config/: agents.yaml  tasks.yaml
src/rulerepopoc/tools/: Settlement RFP_Skeleton.xlsx  customtools.py
